Fix weird spacing on default layout in tablet mode

--- a/src/app/(website)/layout.module.css
+++ b/src/app/(website)/layout.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  align-content: flex-start;
   min-height: 100vh;
   gap: 48px;
   padding: 24px;
